--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
                             <div class="col-md-6 skill-progress-right">
                                 <div class="skillbar-container col-md-12">
-                                    <h4 class="progress-label" style="color : white">Go<span class="progress-percentage">60%</span></h4>
+                                    <h4 class="progress-label" style="color : white">Machine Learning<span class="progress-percentage">60%</span></h4>
                                     <div class="progress">
                                         <div class="progress-bar bg-danger" role="progressbar" style="width: 60%;" aria-valuenow="25" aria-valuemin="0"
                                             aria-valuemax="100">
