--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                             <li>
                                 <a href="/" class="nav-link active-nav-link">Home</a>
                             </li>
-                            <!-- <li class="inline-list-item">
-                                <a href="/" class="nav-link">About</a>
-                            </li> -->
+                            <li class="inline-list-item">
+                                <a href="#about" class="nav-link">About</a>
+                            </li>
                             <li class="inline-list-item">
                                 <a href="/" class="nav-link">Projects</a>
                             </li>
@@ -55,6 +55,22 @@
                     </div>
                 </div>
             </header>
+
+            <main class="main">
+                <section class="about container" id="about">
+                    <div class="flex-container">
+                        <div class="flex-item section-lead" >
+                            <h2 class="section-head">About Me</h2>
+                            <p class="section-text">I am an aspiring Fullstack Web Developer, currently exploring and building applications with <span class="secondary-color">HTML</span>, <span class="secondary-color">CSS</span>, <span class="secondary-color">JavaScript</span>, and <span class="secondary-color">ReactJS</span>.</p>
+                            <p class="section-text">I also enjoy problem solving, and have invested a good amount of time to strenghten my ability in the domain. I've deep dived itto choose the best <span class="secondary-color">data strcuture</span> and apply <span class="secondary-color">algorithms</span> to solve problems using various online coding platforms such as LeetCode.</p>
+                        </div>
+                        <div class="flex-item section-image">
+                            <img src="./images/bharati.jpg" alt="Section Image of Bharati" class="about-img" />
+                            
+                        </div>
+                    </div>
+                </section>
+            </main>
         </div>  
         
         <script src="./script.js"></script>
