style: edit nav links

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="flex-item section-lead" >
                             <h2 class="section-head">About Me</h2>
                             <p class="section-text">I am an aspiring Fullstack Web Developer, currently exploring and building applications with <span class="secondary-color">HTML</span>, <span class="secondary-color">CSS</span>, <span class="secondary-color">JavaScript</span>, and <span class="secondary-color">ReactJS</span>.</p>
-                            <p class="section-text">I also enjoy problem solving, and have invested a good amount of time to strenghten my ability in the domain. I've deep dived itto choose the best <span class="secondary-color">data strcuture</span> and apply <span class="secondary-color">algorithms</span> to solve problems using various online coding platforms such as LeetCode.</p>
+                            <p class="section-text">I also enjoy problem solving, and have invested a good amount of time to strenghten my ability in the domain. I've explored techniques to choose the best possible <span class="secondary-color">data strcuture</span> and apply <span class="secondary-color">algorithms</span> to solve problems using various online coding platforms such as LeetCode.</p>
                         </div>
                         <div class="flex-item section-image">
                             <img src="./images/bharati.jpg" alt="Section Image of Bharati" class="about-img" />
