--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                             <li>
                                 <a href="/" class="nav-link active-nav-link">Home</a>
                             </li>
-                            <li class="inline-list-item">
+                            <!-- <li class="inline-list-item">
                                 <a href="#about" class="nav-link">About</a>
-                            </li>
+                            </li> -->
                             <li class="inline-list-item">
                                 <a href="/" class="nav-link">Projects</a>
                             </li>
@@ -43,13 +43,13 @@
                         <img src="./images/bharati1.jpg" alt="Hero Image of Bharati" class="showcase-img">
                         <h1 class="showcase-hero">Bharati Subramanian</h1>
                         <div class="line-secondary"></div>
-                        <p class="showcase-lead">A <span class="secondary-color">Developer</span> determined to build responsive, scalable, and user-friendly apps.</p>
+                        <p class="showcase-lead">A <span class="invert-secondary-color">Developer</span> determined to build responsive, scalable, and user-friendly apps.</p>
                         <div class="showcase-button-container">
                             <a href="" class="btn btn-primary">
                                 Download Resume
                             </a>
-                            <a href="" class="btn btn-secondary">
-                                Contact Me
+                            <a href="#about" class="btn btn-secondary">
+                                About Me
                             </a>
                         </div>
                     </div>
@@ -59,14 +59,20 @@
             <main class="main">
                 <section class="about container" id="about">
                     <div class="flex-container">
-                        <div class="flex-item section-lead" >
+                        <div class="flex-item text-content" >
                             <h2 class="section-head">About Me</h2>
-                            <p class="section-text">I am an aspiring Fullstack Web Developer, currently exploring and building applications with <span class="secondary-color">HTML</span>, <span class="secondary-color">CSS</span>, <span class="secondary-color">JavaScript</span>, and <span class="secondary-color">ReactJS</span>.</p>
-                            <p class="section-text">I also enjoy problem solving, and have invested a good amount of time to strenghten my ability in the domain. I've explored techniques to choose the best possible <span class="secondary-color">data strcuture</span> and apply <span class="secondary-color">algorithms</span> to solve problems using various online coding platforms such as LeetCode.</p>
+                            <div class="section-lead">
+                                <p class="section-text">I am an aspiring Fullstack Web Developer, currently exploring and building applications with <span class="secondary-color">HTML</span>, <span class="secondary-color">CSS</span>, <span class="secondary-color">JavaScript</span>, and <span class="secondary-color">ReactJS</span>. <br/><br/>
+                                I also enjoy problem solving, and have invested a good amount of time to strenghten my ability in the domain. I've explored techniques to choose the best possible <span class="invert-secondary-color">data strcutures</span> and apply <span class="invert-secondary-color">algorithms</span> for solving problems on coding platforms such as LeetCode.
+                                <br />
+                                I enjoy web designing, and would love to study and gain experience in UI/UX designing as well. 
+                                </p>
+                                <p class="section-text">Aprt from tech, you will see me reading books, singing, or drinking coffee and tea!</p>
+                            </div>
+                            <a href="" class="btn btn-primary">Connect</a>
                         </div>
-                        <div class="flex-item section-image">
-                            <img src="./images/bharati.jpg" alt="Section Image of Bharati" class="about-img" />
-                            
+                        <div class="flex-item image-content">
+                        <img src="./images/bharati.jpg" alt="Section Image of Bharati" class="about-img" />  
                         </div>
                     </div>
                 </section>
