--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
                                 </p>
                                 <p class="section-text">Aprt from tech, you will see me reading books, singing, or drinking coffee and tea!</p>
                             </div>
-                            <a href="" class="btn btn-primary">Connect</a>
+                            <div class="about-button-container">
+                                <a href="" class="btn btn-primary">Connect</a>
+                                <a href="#skills" class="btn btn-secondary">Skills</a>
+                            </div>
                         </div>
                         <div class="flex-item image-content">
                         <img src="./images/bharati.jpg" alt="Section Image of Bharati" class="about-img" />  
@@ -77,6 +80,7 @@
                     </div>
                 </section>
                 <section class="skills container" id="skills">
+                    <h2 class="section-head">Skills</h2>
                     <div class="skill-list-container">
                         <ul class="skill-list list-style-none">
                             <li class="skill-list-item">
@@ -151,7 +155,14 @@
                                 </span>
                                 <span class="skill-title">Git</span>
                             </li>
+                            <li class="skill-list-item">
+                                <span class="skill-icon">
+                                    <i class="fas fa-database" title="SQL"></i>
+                                </span>
+                                <span class="skill-title">SQL</span>
+                            </li>
                         </ul>
+                        <p class="skills-others">A few other notable technologies I have worked with are: <span class="invert-secondary-color" title="Systems, Applications & Products in Data Processing">SAP</span>, <span class="invert-secondary-color">C</span>, <span class="invert-secondary-color">C++</span>, <span class="invert-secondary-color">C# and ASP.NET</span>, <span class="invert-secondary-color">JSP and Servlets</span>, <span class="invert-secondary-color">PHP</span>, <span class="invert-secondary-color">Azure ML</span>. My work with these technologies have been limited, and I am still a beginner. But I look forward to work in length with them in in the future.</p>
                     </div>
                     
                 </section>
