--- a/index.html
+++ b/index.html
@@ -79,12 +79,9 @@
                         <div class="col-md-12">
                             <div class="about-text">
                                 <h1>Hello Friend!</h1>
-                                <h2 class="text-center" style="color:#48e0e4">I'm <b>Bharati Subramanian</b> - a simple, short, enthusiastic and a coffee-loving person! I adore coding and my go-to language is Java. 
-                                        My day begins and ends with coding, and I try to develop projects in my free time to implement whatever I learn. I am also involved with Full Stack Web and Android Development.
-                                        My other areas of interest include Machine learning, Data Science and UI/UX design.  
-                                        <br /><br />
-                                        I also love reading books and I have profound interests for English Literature and Music.             
-                                </h2>
+                                <h2 class="text-center" style="color:#48e0e4">I'm <b>Bharati Subramanian</b> - a simple, short, enthusiastic <strong>Front End Web Developer</strong>, who loves to translate theory to code. I believe that the best way to to develop programming skills is to get your hands dirty and start small. I aspire to become a Full Stack Web Developer, and also explore UI/ UX design in the future.
+                                <br /><br />
+                                I also love reading books and I have profound interests for English Literature and Music.             
                             </div>
                         </div>
                     </div>
