edit: sass icon font size

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 <span class="skill-title">CSS3</span>
                             </li>
                             <li class="skill-list-item">
-                                <span class="skill-icon">
+                                <span class="skill-icon skill-sass">
                                     <i class="fab fa-sass" title="Sass"></i>
                                 </span>
                                 <span class="skill-title">Sass</span>
