bug: edit projects and blogs links

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                             <a href="#about" class="navlink">About</a>
                         </li> -->
                         <li>
-                            <a href="#projects" class="navlink">Projects</a>
+                            <a href="./projects/" class="navlink">Projects</a>
                         </li>
                         <li>
-                            <a href="#home" class="navlink">Blogs</a>
+                            <a href="./blogs/" class="navlink">Blogs</a>
                         </li>
                     </ul>
                     <label class="theme-toggler" for="theme-checkbox">
