feat: initial projects preview

--- a/projects/index.html
+++ b/projects/index.html
@@ -46,8 +46,33 @@
                 </nav>
                 
             </header>
-            <main class="main">
+            <main class="projects-main main">
                
+
+               <section class="projects container" id="projects">
+                    <h1 class="hero-text">
+                        <strong>
+                            Projects I have been Working on
+                        </strong>
+                    </h1>
+                   <ol class="list-style-none project-list-container">
+                       <li class="project project-todo flex-container flex-column justify-center align-start">
+                           <div class="project-image">
+                            <img src="./images/todp-app.PNG" alt="">
+                           </div>
+                           <div class="project-content">
+                               <h3 class="article-head">Todo List App</h3>
+                               <p class="section-text"></p>
+                               <a href="./todo-list" class="btn btn-primary primary">View More <i class="fas fa-chevron-right"></i></a>
+                           </div>
+                       </li>
+                       <li class="project project-weather-app">
+                        <!-- <div class="project-img">
+                        </div> -->
+                        <img src="./images/weather-app.PNG" alt="">
+                    </li>
+                    </ol>
+               </section>
             </main>
         </div>
         <footer class="footer container" id="footer">
