refactor: initial projects review

--- a/projects/index.html
+++ b/projects/index.html
@@ -66,11 +66,16 @@
                                <a href="./todo-list" class="btn btn-primary primary">View More <i class="fas fa-chevron-right"></i></a>
                            </div>
                        </li>
-                       <li class="project project-weather-app">
-                        <!-- <div class="project-img">
-                        </div> -->
-                        <img src="./images/weather-app.PNG" alt="">
-                    </li>
+                       <li class="project project-weather-app flex-container flex-column justify-center align-start">
+                            <div class="project-image">
+                                <img src="./images/weather-app.PNG" alt="">
+                            </div>
+                            <div class="project-content">
+                                <h3 class="article-head">Weather App</h3>
+                                <p class="section-text"></p>
+                                <a href="./weather-app" class="btn btn-primary primary">View More <i class="fas fa-chevron-right"></i></a>
+                            </div>
+                        </li>
                     </ol>
                </section>
             </main>
