style: edit heading font sizes

--- a/projects/index.html
+++ b/projects/index.html
@@ -50,28 +50,29 @@
                
 
                <section class="projects container" id="projects">
-                    <h1 class="hero-text">
+                    <h1 class="hero-text text-center">
                         <strong>
-                            Projects I have been Working on
+                            My Projects
                         </strong>
                     </h1>
                    <ol class="list-style-none project-list-container">
                        <li class="project project-todo flex-container flex-column justify-center align-start">
+                            <h3 class="lead-text">Todo List App</h3>
                            <div class="project-image">
                             <img src="./images/todp-app.PNG" alt="">
                            </div>
                            <div class="project-content">
-                               <h3 class="article-head">Todo List App</h3>
+                               
                                <p class="section-text"></p>
                                <a href="./todo-list" class="btn btn-primary primary">View More <i class="fas fa-chevron-right"></i></a>
                            </div>
                        </li>
                        <li class="project project-weather-app flex-container flex-column justify-center align-start">
+                            <h3 class="lead-text">Weather App</h3>
                             <div class="project-image">
                                 <img src="./images/weather-app.PNG" alt="">
                             </div>
                             <div class="project-content">
-                                <h3 class="article-head">Weather App</h3>
                                 <p class="section-text"></p>
                                 <a href="./weather-app" class="btn btn-primary primary">View More <i class="fas fa-chevron-right"></i></a>
                             </div>
