styles: project list responsiveness

--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
                                 I love to build and develop challenging, new applications. I believe the best means to become better at programming is by developing applications that translates theory into something live and working. In addition, this practice also adds to confidence, increased code quality and encourages documenting your journey.
                                 <br /><br />
                                 I'm currently improving my HTML, CSS, JavaScript, and ReactJS skills by developing front-end applications. 
-                                <br />
+                                <!-- <br />
                                 Developing applications taught me the importance of writing clean code,structuring files, tracking code, and breaking down a problem into sub problems. <br/>
-                                <em>An important lesson was that there is much more to developing applications that writing code!</em>
+                                <em>An important lesson was that there is much more to developing applications that writing code!</em> -->
                             </p>
                             <div class="buttons-container flex-container justify-center align-start project-buttons">
                                 <a href="./projects/" class="btn btn-primary">My Projects</a>
@@ -208,8 +208,8 @@
                                 I also try to document my journey and learnings through blog posts. I often try to write blog posts on topics that I find difficult to grasp. The writing process gives a wonderful opportunity to work on my presentation skills and filter content to highlight only the important concepts.
                                 <br /> <br />
                                 Blog writing I feel is the classic way of "learning by teaching". The abundance of research behind a blog post adds on to a tremendous amount of knowledge and learning how to convert thoughts, theory, and knowledge into describable words. 
-                                <br/><br/>
-                                have written over 5 blog posts on topics from HTML, CSS, and JavaScript. I am in the process of writing more blogs on topics from ReactJS as well!
+                                <!-- <br/><br/>
+                                have written over 5 blog posts on topics from HTML, CSS, and JavaScript. I am in the process of writing more blogs on topics from ReactJS as well! -->
                             </p>
                             <div class="buttons-container flex-container justify-center align-start project-buttons">
                                 <a href="./blogs/" class="btn btn-primary">My Blog Posts</a>
