refactor: spelling correction
Changed "Aprt" to "Apart"

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 Web and UI/ UX design are other fields I'd love to study and gain experience in as well. 
                                 
                                 <br><br />
-                                Aprt from tech, you will see me reading books, singing, or drinking coffee and tea!
+                                Apart from tech, you will see me reading books, singing, or drinking coffee and tea!
                             </p>
                             <div class="buttons-container flex-container justify-center align-start about-buttons">
                                 <a href="#skills" class="btn btn-primary">My Skills</a>
