feat: added triangles, calculator app to projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -79,6 +79,26 @@
                                 <a href="./weather-app" class="btn btn-primary primary">View More <i class="fas fa-chevron-right"></i></a>
                             </div>
                         </li>
+                        <li class="project project-weather-app flex-container flex-column justify-center align-start">
+                            <h3 class="lead-text">Calculator App</h3>
+                            <div class="project-image">
+                                <img src="./images/calculator-app.PNG" alt="">
+                            </div>
+                            <div class="project-content">
+                                <p class="section-text"></p>
+                                <a href="./calculator-app" class="btn btn-primary primary">View More <i class="fas fa-chevron-right"></i></a>
+                            </div>
+                        </li>
+                        <li class="project project-weather-app flex-container flex-column justify-center align-start">
+                            <h3 class="lead-text">Play With Triangles</h3>
+                            <div class="project-image">
+                                <img src="./images/play-with-triangles-app.PNG" alt="">
+                            </div>
+                            <div class="project-content">
+                                <p class="section-text"></p>
+                                <a href="./play-with-triangles" class="btn btn-primary primary">View More <i class="fas fa-chevron-right"></i></a>
+                            </div>
+                        </li>
                     </ol>
                </section>
             </main>
