styles: lead text, challenges li ul

--- a/projects/todo-list/index.html
+++ b/projects/todo-list/index.html
@@ -95,14 +95,14 @@
                             <h2 class="lead-text">
                                 Project Challenges
                             </h2>
-                            <p class="section-text">
+                            <ul class="section-text">
                                 <li>
                                     Designing the overall application was incredibly challenging. Taking into account responsiveness across all devices was one of the major goals for this project.
                                 </li>
                                 <li>
                                     Editing a previously added todo item was another challenge. More so, to change the same todo item from the local storage as well.
                                 </li>
-                            </p>
+                            </>
                         </div>
                         <!-- <div class="project-future">
                             <h2 class="lead-text">
