--- a/projects/weather-app/index.html
+++ b/projects/weather-app/index.html
@@ -98,7 +98,7 @@
                             <h2 class="lead-text">
                                 Project Challenges
                             </h2>
-                            <p class="section-text">
+                            <ul class="section-text">
                                 <li>Figuring the number of components, and states that were required for the application.</li>
                                 <li>
                                     Fecthing data in a react application was a major challenge. The next challenge was immediately fetching weather data when location id was available.
@@ -109,7 +109,7 @@
                                 <li>
                                     A final challenge was deciding upon which values were needed to be passed on as props from a parent to a child component.
                                 </li>
-                            </p>
+                            </>
                         </div>
                         <!-- <div class="project-future">
                             <h2 class="lead-text">
