refactor: open footer links in new tab

--- a/projects/calculator-app/index.html
+++ b/projects/calculator-app/index.html
@@ -122,27 +122,27 @@
                 </p>
                 <ul class="social-links flex-container flex-row align-center justify-center">
                     <li class="flex-item social-link">
-                        <a href="https://github.com/bharati-21">
+                        <a href="https://github.com/bharati-21" target="_blank">
                            <i class="fab fa-github"></i>
                         </a>
                     </li>
                     <li class="social-link">
-                        <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/">
+                        <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/" target="_blank">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </li>
                     <li class="social-link">
-                        <a href="https://twitter.com/_girlwhocodes">
+                        <a href="https://twitter.com/_girlwhocodes" target="_blank">
                             <i class="fab fa-twitter"></i>
                         </a>
                     </li>
                     <li class="social-link">
-                        <a href="https://dev.to/bharati21">
+                        <a href="https://dev.to/bharati21" target="_blank">
                             <i class="fab fa-dev"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="mailto:bharatisharada@gmail.com">
+                        <a href="mailto:bharatisharada@gmail.com" target="_blank">
                             <i class="fas fa-envelope"></i>
                         </a>
                     </li>
